// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`API endpoints Issue create 1`] = `
{
  "comments": [
    {
      "body": "Comment body",
      "id": 1,
      "issue_id": 1,
    },
  ],
  "id": 1,
  "number": 1,
  "repo": {
    "description": "Repo 1 description",
    "id": 1,
    "is_public": true,
    "latest_num": 1,
    "name": "Repo 1",
    "org_id": 1,
    "slug": "repo1",
  },
  "title": "Issue 1",
}
`;

exports[`API endpoints Org create 1`] = `
{
  "blank_repos": [],
  "description": "Org NEW description",
  "name": "Org NEW",
  "nameAndDesc": "Org NEW: Org NEW description",
  "slug": "orgNEW",
  "summary": "Org NEWOrg NEW description",
}
`;

exports[`API endpoints Org custom create 1`] = `
{
  "blank_repos": [],
  "description": "Org custom NEW description",
  "name": "Org Custom NEW",
  "nameAndDesc": "Org Custom NEW: Org custom NEW description",
  "slug": "orgCustomNEW",
  "summary": "Org Custom NEWOrg custom NEW description",
}
`;

exports[`API endpoints Org custom endpoint - fetch action 1`] = `
{
  "name": "Fetch me org 1",
  "repoSlug": "repo1",
}
`;

exports[`API endpoints Org custom one endpoint - action with query 1`] = `
{
  "inputName": "Org 1",
  "inputOrgId": 1,
  "orgById": [
    {
      "name": "Org 1",
    },
  ],
  "orgByName": [
    {
      "name": "Org 1",
    },
  ],
}
`;

exports[`API endpoints Org custom update 1`] = `
{
  "blank_repos": [
    {
      "id": 4,
      "nameAndDesc": "Repo 4 Repo 4 description",
      "total_issues": 0,
    },
  ],
  "description": "Org custom 2A description",
  "name": "Org custom 2A",
  "nameAndDesc": "Org custom 2A: Org custom 2A description",
  "slug": "org2",
  "summary": "Org custom 2AOrg custom 2A description",
}
`;

exports[`API endpoints Org get 1`] = `
{
  "blank_repos": [
    {
      "id": 2,
      "nameAndDesc": "Repo 2 Repo 2 description",
      "total_issues": 0,
    },
    {
      "id": 1,
      "nameAndDesc": "Repo 1 Repo 1 description",
      "total_issues": 0,
    },
  ],
  "description": "Org 1 description (odd)",
  "name": "Org 1",
  "nameAndDesc": "Org 1: Org 1 description (odd)",
  "slug": "org1",
  "summary": "Org 1Org 1 description (odd)",
}
`;

exports[`API endpoints Org list with non default paging 1`] = `
{
  "data": [
    {
      "blank_repos": [
        {
          "id": 4,
          "nameAndDesc": "Repo 4 Repo 4 description",
          "total_issues": 0,
        },
      ],
      "description": "Org 2 description (even)",
      "name": "Org 2",
      "nameAndDesc": "Org 2: Org 2 description (even)",
      "slug": "org2",
      "summary": "Org 2Org 2 description (even)",
    },
    {
      "blank_repos": [
        {
          "id": 2,
          "nameAndDesc": "Repo 2 Repo 2 description",
          "total_issues": 0,
        },
        {
          "id": 1,
          "nameAndDesc": "Repo 1 Repo 1 description",
          "total_issues": 0,
        },
      ],
      "description": "Org 1 description (odd)",
      "name": "Org 1",
      "nameAndDesc": "Org 1: Org 1 description (odd)",
      "slug": "org1",
      "summary": "Org 1Org 1 description (odd)",
    },
  ],
  "page": 2,
  "pageSize": 2,
  "totalCount": 4,
  "totalPages": 2,
}
`;

exports[`API endpoints Org list with paging 1`] = `
{
  "data": [
    {
      "blank_repos": [],
      "description": "Org 4 description (even)",
      "name": "Org 4",
      "nameAndDesc": "Org 4: Org 4 description (even)",
      "slug": "org4",
      "summary": "Org 4Org 4 description (even)",
    },
    {
      "blank_repos": [],
      "description": "Org 3 description (odd)",
      "name": "Org 3",
      "nameAndDesc": "Org 3: Org 3 description (odd)",
      "slug": "org3",
      "summary": "Org 3Org 3 description (odd)",
    },
    {
      "blank_repos": [
        {
          "id": 4,
          "nameAndDesc": "Repo 4 Repo 4 description",
          "total_issues": 0,
        },
      ],
      "description": "Org 2 description (even)",
      "name": "Org 2",
      "nameAndDesc": "Org 2: Org 2 description (even)",
      "slug": "org2",
      "summary": "Org 2Org 2 description (even)",
    },
    {
      "blank_repos": [
        {
          "id": 2,
          "nameAndDesc": "Repo 2 Repo 2 description",
          "total_issues": 0,
        },
        {
          "id": 1,
          "nameAndDesc": "Repo 1 Repo 1 description",
          "total_issues": 0,
        },
      ],
      "description": "Org 1 description (odd)",
      "name": "Org 1",
      "nameAndDesc": "Org 1: Org 1 description (odd)",
      "slug": "org1",
      "summary": "Org 1Org 1 description (odd)",
    },
  ],
  "page": 1,
  "pageSize": 20,
  "totalCount": 4,
  "totalPages": 1,
}
`;

exports[`API endpoints Org update 1`] = `
{
  "blank_repos": [
    {
      "id": 4,
      "nameAndDesc": "Repo 4 Repo 4 description",
      "total_issues": 0,
    },
  ],
  "description": "Org 2A description",
  "name": "Org 2A",
  "nameAndDesc": "Org 2A: Org 2A description",
  "slug": "org2",
  "summary": "Org 2AOrg 2A description",
}
`;

exports[`API endpoints PublicRepo list 1`] = `
[
  {
    "description": "Repo 4 description",
    "id": 4,
    "org_id": 2,
    "slug": "repo4",
  },
]
`;

exports[`API endpoints Repo create 1`] = `
{
  "description": "Description: Repo 6 description",
  "id": 6,
  "org_id": 1,
  "slug": "org_1-W5JU1e0Kj1Kv",
}
`;

exports[`API endpoints Repo get 1`] = `
{
  "description": "Repo 1 description",
  "id": 1,
  "org_id": 1,
  "slug": "repo1",
}
`;

exports[`API endpoints Repo list 1`] = `
[
  {
    "description": "Repo 1 description",
    "id": 1,
    "org_id": 1,
    "slug": "repo1",
  },
  {
    "description": "Repo 2 description",
    "id": 2,
    "org_id": 1,
    "slug": "repo2",
  },
  {
    "description": "Repo 3 description",
    "id": 3,
    "org_id": 1,
    "slug": "repo3",
  },
]
`;

exports[`API endpoints Repo update 1`] = `
{
  "description": "Repo 2A description",
  "id": 2,
  "org_id": 1,
  "slug": "repo2",
}
`;
